<?xml version="1.0"?>
<package format="2">
  <name>crazyflie_autonomous</name>
  <version>0.1.0</version>
  <description>
    The crazyflie_autonomous package contains launch files and scripts to detect 
    the crazyflie with a Kinect v2 sensor and control the quadrotor to a target 
    destination.
  </description>

  <author>Carol Fairchild</author>
  <maintainer email="cfairchild@fairchildrobotics.com">Carol Fairchild</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>crazyflie_driver</exec_depend>
  <exec_depend>crazyflie_demo</exec_depend>
  <exec_depend>kinect2_bridge</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sys</exec_depend>
<!--  <exec_depend>cv2</exec_depend>
  <exec_depend>numpy</exec_depend>  -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
